[gd_scene load_steps=2 format=2]

[ext_resource path="res://options_menu/options_menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 165.0
margin_right = 315.0
margin_bottom = 720.0
rect_min_size = Vector2( 150, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="difficulty_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 150.0
margin_bottom = 276.0
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="difficulty_slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 150.0
margin_bottom = 296.0
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="master_volume_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 150.0
margin_bottom = 314.0
text = "Master Volume"

[node name="master_volume_slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 318.0
margin_right = 150.0
margin_bottom = 334.0
max_value = 1.0
step = 0.01

[node name="music_volume_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 150.0
margin_bottom = 352.0
text = "Music Volume"

[node name="music_volume_slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 150.0
margin_bottom = 372.0
max_value = 1.0
step = 0.01

[node name="sound_volume_label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 150.0
margin_bottom = 390.0
text = "Sound Volume"

[node name="sound_volume_slider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
margin_top = 394.0
margin_right = 150.0
margin_bottom = 410.0
max_value = 1.0
step = 0.01

[node name="return_to_main_menu" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 150.0
margin_bottom = 434.0
text = "Quit"

[node name="exit_button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 150.0
margin_bottom = 458.0
text = "Return"
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/difficulty_slider" to="." method="_on_difficulty_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/master_volume_slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/music_volume_slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/sound_volume_slider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/return_to_main_menu" to="." method="_on_return_to_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
